Bug 762407 - Avoid deadlock when exiting fullscreen Flash videos on Android r=blassey a=akeybl